# quotation-cli

./: .gitignore  README.md  pyproject.toml
src/: main.py  settings.py
