[tool.poetry]
name = "quotation-cli"
version = "0.1.0"
description = ""
authors = ["Kauê Fraga Rodrigues <kauefragarodrigues456@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "quotation_cli"}]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.3.1"
httpx = "^0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
